--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.0.0",
+    "@smakss/react-scroll-direction": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.7",
+    "react-type-animation": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +43,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "react-router-dom": "^6.6.1",
     "tailwindcss": "^3.2.4"
   }
 }
